--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ExpenseTrackerAPI
 
 spring.datasource.url=jdbc:mysql://localhost:3306/expenseapi?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Hainam123
+spring.datasource.username=
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
